--- a/3D Image Slider(Auto Play)/index.html
+++ b/3D Image Slider(Auto Play)/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>3D Image Slider(autoPlay)</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -25,3 +25,4 @@
     </div>
   </body>
 </html>
+
